added the filterSource configuration in the content plugin

--- a/content/pom.xml
+++ b/content/pom.xml
@@ -78,6 +78,9 @@
                     <plugin>
                         <groupId>com.day.jcr.vault</groupId>
                         <artifactId>content-package-maven-plugin</artifactId>
+                        <configuration>
+                            <filterSource>src/main/content/META-INF/vault/filter.xml</filterSource>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>install-content-package</id>
