set verbose on for package installation

--- a/content/pom.xml
+++ b/content/pom.xml
@@ -45,6 +45,7 @@
                 <artifactId>content-package-maven-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
+                    <verbose>true</verbose>
                     <group>com.mike.cq</group>
                     <filterSource>src/main/content/META-INF/vault/filter.xml</filterSource>
                     <embeddeds>
